# Personal-Dashboard-Desktop

./: .gitignore  JARVIS-DESKTOP.md  PARITY.md  README.md  index.html  package.json  parity.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: parity.yml  release.yml
docs/superpowers/plans/: 2026-06-10-deck-shell.md  2026-06-10-habits-section.md  2026-06-10-mood-section.md  2026-06-10-my-day-section.md  2026-06-10-notes-section.md  2026-06-10-sleep-section.md  2026-06-10-tasks-section.md
docs/superpowers/specs/: 2026-06-10-desktop-feature-max-partials-design.md
scripts/: parity-check.mjs
src/: App.tsx  main.tsx  parity.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: MoodPad.tsx  ParityBanner.tsx  Rail.test.tsx  Rail.tsx  TitleBar.tsx  UpdateBanner.tsx
src/components/ui/: button.tsx  card.tsx
src/lib/: agent.ts  bootstrap.ts  day-plan.test.ts  day-plan.ts  format.ts  mood.test.ts  mood.ts  parity.ts  sections.test.ts  sections.ts  settings.ts  sleep.test.ts  sleep.ts  tasks.test.ts  tasks.ts  updater.ts  use-context.ts  win-actions.ts  window.ts
src/windows/: Capture.tsx  Deck.test.tsx  Deck.tsx  Glance.tsx  Morning.tsx  Settings.tsx  Widget.tsx
src/windows/sections/: Agenda.test.tsx  Agenda.tsx  Habits.test.tsx  Habits.tsx  Mood.test.tsx  Mood.tsx  Notes.test.tsx  Notes.tsx  Placeholder.tsx  Sleep.test.tsx  Sleep.tsx  Tasks.test.tsx  Tasks.tsx  Today.tsx  Wins.test.tsx  Wins.tsx
